--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "lint-staged": "^10.1.6",
     "npm-run-all": "^4.1.5",
     "react-test-renderer": "^16.13.1",
-    "start-server-and-test": "^1.11.0"
+    "start-server-and-test": "^1.11.0",
+    "styled-components": "^5.1.1"
   }
 }
